Deployments/YAMLs/DEV/Ingress/aksauto-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aksauto-ingress
  namespace: aks-workshop-dev
  annotations:    
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1 
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-cors: "true"    
spec:
  # tls:
  #   - hosts:
  #     - aksdemofront.eastus.cloudapp.azure.com
  #     secretName: aksdemo-tls-secret
  rules:    
  - http:
      paths:
      # - path: /?(.*)
      #   backend:
      #     serviceName: frontend
      #     servicePort: 80
      - path: /iot/?(.*)
        backend:
          serviceName: iotmqttsender
          servicePort: 80
